更新项目描述为“LoginLab - AI驱动的登录页实验室”，修改相关文件中的版权信息和页面标题，优化代码中的字符串引号格式，确保一致性。

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "loginlab",
   "version": "1.0.0",
-  "description": "Beautiful Login - 精美移动端登录页面集合",
+  "description": "LoginLab - AI驱动的登录页实验室",
   "main": "index.html",
   "scripts": {
     "dev": "npx http-server -p 8000 -o"
@@ -30,5 +30,5 @@
     "type": "git",
     "url": "https://github.com/yuanyang749/loginlab.git"
   },
-  "homepage": "https://loginlab.vercel.app"
+  "homepage": "https://loginlab.520ai.xin"
 }
